# tauri

./: README.md  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  rustFunctions.ts
src-tauri/: Cargo.toml  tauri.conf.json  test.txt
src-tauri/src/: lexer.rs  main.rs  model.rs
src/components/: Button.tsx  Carousel.tsx  Form.tsx
src/hooks/: index.ts  useForm.ts  useQueryData.ts
