[package]
name = "search_tauri"
version = "0.0.1"
description = "First app with Tauri (Search engine)"
authors = ["Alejandro Tomasella"]
license = "MIT"
repository = "src"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlite = "0.30.4"
sqlite3-sys = "0.14.0"
xml-rs = "0.8.4"
rust-stemmers = "1.2.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
